# mcpp

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile.in
examples/: client_example.cpp  stdio_server.cpp
include/mcpp/client/: client.hpp
include/mcpp/core/: error.hpp  json.hpp  types.hpp
include/mcpp/enterprise/: auth.hpp  circuit.hpp  metrics.hpp  middleware.hpp  ratelimit.hpp
include/mcpp/protocol/: message.hpp  request.hpp  response.hpp
include/mcpp/server/: prompt.hpp  resource.hpp  server.hpp
include/mcpp/transport/: factory.hpp  http.hpp  itransport.hpp  stdio.hpp  transport.hpp  websocket.hpp
scripts/: install_deps.sh
src/client/: client.cpp
src/core/: error.cpp  json.cpp
src/enterprise/: auth.cpp  circuit.cpp  metrics.cpp  middleware.cpp  ratelimit.cpp
src/protocol/: message.cpp  request.cpp  response.cpp
src/server/: prompt.cpp  resource.cpp  server.cpp  tool.cpp
src/transport/: http.cpp  stdio.cpp  transport.cpp  websocket.cpp
tests/: CMakeLists.txt  main.cpp  test_circuit.cpp  test_json.cpp  test_message.cpp  test_metrics.cpp  test_ratelimit.cpp  test_server.cpp  test_transport.cpp
